# unefy

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_02_1602-5921d2dc52c9_initial_schema.py  2026_04_02_2016-046d33ce6194_extend_tenant_with_contact_address_and_.py  2026_04_03_1210-fb8e97540d6e_add_short_name_to_tenant.py  2026_04_03_1257-a0161c039dee_add_tax_and_nonprofit_fields_to_tenant.py  2026_04_03_1732-0809d6a457a7_widen_country_column_to_100_chars.py  2026_04_03_1800-834ee01b8714_add_locale_to_user.py  2026_04_04_1512-c44800946477_add_member_number_format_fields.py  2026_04_04_1623-be632fa3ec0b_add_members_table.py  2026_04_04_1926-28e758a5dafa_add_member_statuses_to_tenant.py  2026_04_06_0936-2ea850112c6e_add_events_and_shooting_results_tables.py  2026_04_06_1336-76365fb79339_replace_events_with_competition_session_.py  2026_04_07_1210-a4b24ba82095_add_disciplines_table.py
backend/app/: config.py  database.py  dependencies.py  main.py  redis.py
backend/app/api/: health.py
backend/app/core/: discipline_seeds.py  exceptions.py  jwt.py  rate_limit.py  security.py  seed_disciplines.py  seeds.py
backend/app/models/: __init__.py  base.py  competition.py  discipline.py  event.py  member.py  tenant.py  user.py
backend/tests/: conftest.py  test_auth.py  test_auth_mobile.py  test_club.py  test_competitions.py  test_events.py  test_health.py  test_members.py
docs/: audit.md
(+174 files in other folders)
