[project]
name = "unefy-backend"
version = "0.1.0"
description = "Backend API for unefy club management platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "redis[hiredis]>=5.2",
    "httpx>=0.28",
    "structlog>=24.4",
    "pwdlib[argon2]>=0.2",
    "aiofiles>=24.1",
    "authlib>=1.6.9",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "testcontainers[postgres]>=4.9",
    "factory-boy>=3.3",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.14",
    "fakeredis>=2.34.1",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint.per-file-ignores]
"app/core/discipline_seeds.py" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
